syntax = "proto3";

package hydra.v1;

import "dev/restate/sdk/go.proto";

option go_package = "github.com/unkeyed/unkey/go/gen/proto/hydra/v1;hydrav1";

service EnvironmentService {
  option (dev.restate.sdk.go.service_type) = VIRTUAL_OBJECT;

  // AssignFrontlineRoutes creates or reassigns frontline routes to a deployment
  rpc CreateEnvironment(CreateEnvironmentRequest) returns (CreateEnvironmentResponse) {}

}


message CreateEnvironmentRequest {
    string workspace_id = 1;
  string environment_id = 2;
  message Sentinel {
    string id = 1;

    string image = 2;

    uint32 replicas = 3;
    uint32 cpu_millicores = 4;
    uint64 memory_size_mib = 5;

  }
  Sentinel gateway = 3;

}

message CreateEnvironmentResponse {
}
